--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10",
+    "class-variance-authority": "^0.7.0",
     "core-js": "^3.8.3",
+    "postcss": "^8",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss": "^3",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0"
   },
@@ -24,6 +29,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
